docs/book/samples/ch04/ratio.out
error[endpoint]: unhandled err reached main: "division by zero"
  born in main at ratio.kso:1
