docs/book/samples/ch04/ratio.kso
ratio = 10 / 0
print "ratio: {ratio}"
